# jpeg2dct

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
.github/workflows/: cd_publish.yml  ci_test.yml
jpeg2dct/: __init__.py
jpeg2dct/common/: __init__.py
jpeg2dct/numpy/: __init__.py  dctfromjpg.i  dctfromjpg_wrap.cc  dctfromjpg_wrapper.py
test/numpy/: test_load.py
